Fix sizing and spacing of buttons and button contents

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -110,14 +110,20 @@ input:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 3.7rem;
-  width: 6.4rem;
+  height: 3.9rem;
+  width: 6.6rem;
   background-color: hsl(30, 25%, 89%);
   border-radius: 0.6rem;
   cursor: pointer;
-  color: #000;
-  font-size: 2rem;
+  color: hsl(221, 14%, 31%);
+  font-size: 2.8rem;
   box-shadow: 0 0.3rem hsl(28, 16%, 65%);
+  padding-top: 0.3rem;
+}
+
+.decimalBtn {
+  font-size: 1.4rem;
+  padding-top: 0.8rem;
 }
 
 .resetBtn,
@@ -125,10 +131,11 @@ input:hover {
   background-color: hsl(225, 21%, 49%);
   color: #fff;
   text-transform: uppercase;
-  font-size: 1.4rem;
+  font-size: 1.9rem;
   width: 100%;
   grid-column: 1 / 3;
   box-shadow: 0px 0.3rem hsl(224, 28%, 35%);
+  letter-spacing: 0.05rem;
 }
 
 .delBtn {
@@ -139,5 +146,6 @@ input:hover {
   grid-column: 3 / 5;
   width: 100%;
   color: #fff;
+  font-size: 2rem;
   box-shadow: 0px 0.3rem hsl(6, 70%, 34%);
 }
